[package]
name = "rust-meetup-wasm-talk"
version = "0.1.0"
authors = ["Rob Rowe <robrowe04@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"

[dependencies.js-sys]
version = "0.3.0"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Window",
    'Document',
    'Element',
    'EventTarget',
    'HtmlElement',
    'HtmlInputElement',
    'MouseEvent',
    'Node',
      'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'HtmlCanvasElement',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.1", optional = true }
